includes/templates/admin/eael-dashboard/src/App.css
/* ... */
.ea__not-found-wrapper img {
  max-width: 172px;
}

.ea__not-found-wrapper h5 {
  font-size: 20px;
  font-weight: 500;
  color: var(--text-color-100);
  line-height: 1.2em;
  text-align: center;
}

.ea__content-wrapper {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 8px;
}

.ea__content-items {
  background: var(--base-background);
  padding: 16px;
  border: 1px solid var(--border-color-base);
  border-radius: 8px;
  transition: all .25s ease-in-out;
}

.ea__content-items:hover {
  box-shadow: 0px 7px 18px 0px var(--shadow-color-8);
}

.ea__content-head {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 8px;
}

.ea__content-footer {
  display: flex;
  justify-content: space-between;
  gap: 8px;
  align-items: center;
  margin-top: 10px;
}

.content-btn {
  font-size: 11px;
  line-height: 11px;
  font-weight: 500;
  color: var(--base-background);
  text-transform: uppercase;
  padding: 0 4px 0;
  border-radius: 4px;
  height: 18px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.content-btn.updated {
  background: var(--background-6);
}

.content-btn.new {
  background: var(--background-5);
}

.content-btn.popular {
  background: var(--background-7);
}

.content-icons {
  display: flex;
  gap: 10px;
  align-items: center;
}

.content-icons i {
  font-size: 11px;
  color: var(--text-icon-400);
  cursor: pointer;
}

.ea__extension-main-wrap .ea__section-wrapper.ea__main-wrapper {
  padding-bottom: 16px;
}

.ea__tools-content-wrapper {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.ea__connect-others label {
  font-size: 16px;
  line-height: 1.5em;
  font-weight: 500;
  color: var(--text-color-25);
  min-width: 153px;
}

.select-option-external {
  position: relative;
  border: 1px solid var(--text-color-100);
  border-radius: 8px;
}

#ea__dashboard--wrapper .select-option-external .form-select {
  min-width: 100%;
}

span.select-details {
  font-size: 14px;
  line-height: 1.2em;
  font-style: italic;
  color: var(--text-icon-100);
  margin-top: 12px;
  display: inline-block;
}

.ea__integration-content-wrapper {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 16px;
}

.ea__integration-item {
  display: flex;
  flex-direction: column;
}

.ea__integration-header {
  padding: 20px 24px;
  background: var(--background-11);
  border-radius: 8px 8px 0 0;
  border: 1px solid var(--border-color-base);
}

.ea__integration-header h5 {
  font-size: 16px;
  font-weight: 500;
  line-height: 1.2em;
  color: var(--text-color-25);
}

.ea__integration-footer {
  padding: 24px;
  background: var(--base-background);
  border-radius: 0 0 8px 8px;
  border-color: var(--border-color-base);
  border-style: solid;
  border-width: 0 1px 1px 1px;
  display: flex;
  flex-direction: column;
  flex: 1;
}

.ea__integration-footer p {
  font-size: 14px;
  line-height: 1.5em;
  color: var(--text-color-100);
  padding-bottom: 16px;
  border-bottom: 1px solid var(--border-color-base);
  flex: 1;
}

.integration-settings {
  padding-top: 16px;
}

/* --------- Slide css-------- */

.ea__slider-connect {
  width: 100%;
  overflow: hidden;
  position: relative;
  background: var(--base-background);
  border-radius: 8px;
  padding: 24px 24px 40px;
}

.ea__slider-connect .swiper-wrapper {
  max-width: 860px;
}

.swiper-slide {
  display: flex;
}

.ea__premium-item {
  border: 1px solid var(--border-color-base);
  border-radius: 8px;
  margin-bottom: 20px;
  overflow: hidden;
}

.ea__premium-item-footer {
  padding: 16px;
}

.ea__premium-item-footer h5 {
  font-size: 16px;
  font-weight: 500;
  line-height: 1.2em;
  color: var(--text-color-25);
  margin-bottom: 10px;
}

.ea__premium-item-footer p {
  font-size: 14px;
  line-height: 1.5em;
  color: var(--text-color-100);
}

.ea__slider-connect .swiper-pagination-bullets.swiper-pagination-horizontal {
  bottom: -4px;
}

.features-widget-wrapper {
  padding-left: 24px;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: 8px;
}

.features-widget-item {
  display: flex;
  justify-content: center;
  align-items: center;
  background: #FFF;
  width: 50px;
  height: 50px;
  border-radius: 8px;
  cursor: pointer;
  position: relative;
}

.features-widget-item span.eael-tooltip {
  position: absolute;
  left: 50%;
  top: -20px;
  min-width: 125px;
  transform: translate(-50%, -50%);
  font-size: 12px;
  font-weight: 400;
  line-height: 1.2em;
  color: #1D2939;
  font-family: "Rubik", sans-serif;
  text-align: center;
  padding: 8px 4px;
  box-shadow: 0 7px 22px 0 #00012329;
  background: #FFF;
  border-radius: 4px;
  z-index: 99;
  opacity: 0;
  visibility: hidden;
}

.features-widget-item:hover span.eael-tooltip {
  opacity: 1;
  visibility: visible;
}

span.eael-tooltip:after {
  content: '';
  position: absolute;
  bottom: -5px;
  left: 50%;
  transform: translate(-50%);
  border-top: 6px solid #FFF;
  border-right: 6px solid transparent;
  border-left: 6px solid transparent;
}

.ea__feature-list-item p {
  font-size: 16px;
  line-height: 1em;
  color: var(--text-color-25);
}

#ea__dashboard--wrapper .primary-btn i {
  font-size: 9px;
}

.ea__pro-features {
  border: 1px solid var(--border-color-base);
  border-radius: 8px;
  background: linear-gradient(89.99deg, var(--gardient-1) 63.58%, var(--gardient-2) 115.99%);
  padding: 24px;
}

.ea__features-content {
  max-width: 550px;
  padding-right: 16px;
}

.ea__features-content h2 {
  font-size: 26px;
  line-height: 1.2em;
  font-weight: 500;
  color: var(--text-color-25);
  margin-bottom: 12px;
}

.ea__features-content p {
  font-size: 16px;
  line-height: 1.5em;
  font-weight: 400;
  color: var(--text-color-100);
}

.ea__features-content .ea__feature-list-item i {
  font-size: 14px;
  color: var(--base-color-50);
  line-height: 1.6em;
}

.ea__features-content .ea__feature-list-item p {
  color: var(--text-color-25);
}

.ea__premium-content-wrapper {
  display: flex;
  flex-direction: column;
  gap: 16px;
}
/* ... */

